fix vertical overflow on initialization

--- a/src/renderer/src/index.css
+++ b/src/renderer/src/index.css
@@ -3,7 +3,3 @@
 :root {
 	scrollbar-color: #ccccd6 transparent;
 }
-
-body {
-	min-height: 100dvh;
-}
